# GPU-Fabric-Congestion-Simulator-Router

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
.github/workflows/: ci.yml
configs/: phase1_smoke.yaml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  MILESTONES.md  PROJECT_PLAN.md  RESULTS.md  architecture.html  index.html
python/: harness.py  plot_compare.py  plot_fct.py  plot_heatmap.py  run.py  validate_incast.py
src/: main.cpp
src/gpufab/: config.cpp  config.hpp  engine.cpp  engine.hpp  flow.hpp  rng.hpp  telemetry.cpp  telemetry.hpp  time.hpp  topology.cpp  topology.hpp  workloads.cpp  workloads.hpp
src/gpufab/router/: ecmp.cpp  ecmp.hpp  flowlet.cpp  flowlet.hpp  irouter.hpp  rl.cpp  rl.hpp
tests/: test_config.cpp  test_congestion.cpp  test_engine_fct.cpp  test_flowlet.cpp  test_incast_collapse.cpp  test_rl.cpp  test_rng.cpp  test_topology.cpp  test_workloads.cpp
